--- a/eng/eng.html
+++ b/eng/eng.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Generator losowych cytatów filmowych</title>
+    <title>Random Quote Machine</title>
     <script src="https://use.fontawesome.com/15c98dbd15.js"></script>
 
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <a class="btn btn-primary" href="eng/eng.html" role="button">English version</a>
+    <a class="btn btn-primary" href="../index.html" role="button">Polish version</a>
     <div class="container-fluid text-center">
-        <h1>Generator losowych cytatów filmowych</h1>
-        <p class="header">Prezentuje wam moje ulubione cytaty filmowe wszechczasów.</p>
+        <h1>Random Quote Generator</h1>
+        <p class="header">I present you my favorite movie quotes of all time.</p>
         <div class="quotes text-center">
             <span class="quote"></span>
             <span class="author"></span>
@@ -25,8 +25,8 @@
 
         <div class="row">
             <div class="col-xs-4">
-                <button type="button" class="btn btn-primary" type="submit" id="new-quote"><i class="fa fa-quote-left"> Nowy cytat</i></button>
-                <a href="#" class="btn btn-primary" id="tweet"><i class="fa fa-twitter"> Tweetnij!</i></a>
+                <button type="button" class="btn btn-primary" type="submit" id="new-quote"><i class="fa fa-quote-left"> New Quote</i></button>
+                <a href="#" class="btn btn-primary" id="tweet"><i class="fa fa-twitter"> Tweet Out!</i></a>
             </div>
         </div>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
